--- a/Laced/templates/closet.html
+++ b/Laced/templates/closet.html
@@ -8,20 +8,24 @@
     </head>
     <body>
         <header>
-            <h1><img src='static/images/lacedlogo_1.png' /></h1>  
-            <nav>
-                <a href='/home'>Home</a>
-                <a href='/store'>Shop</a>
-                <a href='/trade'>Trade</a>
-                <a href='/closet'>Closet</a>
-                    <button><a href="{{ url_for('logout') }}">Logout</a></button>
-            </nav>
+        <nav id="slide-menu">
+              <br/>
+           <h1><img src='static/images/lacedlogo_1.png'/></h1>
+	       <ul>
+                <li class="timeline"><a href="/home">Home</li></a>
+                <li class="events"><a href="/store">Shop</li></a>
+                <li class="calendar"><a href="/trade">Trade</li></a>
+                <li class="sep settings"><a href="/closet">Closet</li></a>
+		          <li class="logout"><a href="{{ url_for('logout') }}">Logout</li></a>
+	       </ul>
+        </nav>
         </header>
        
   		<!-- Profile Pic + Name 
 	  	=====================================
 	  	-->
-	  	<div class="closet_profile">
+	  <div id='content' class='closet_profile'>
+        <div class="menu-trigger"></div>
 	  		
 	  		<!-- Profile Picture-->
             <br/>
@@ -102,7 +106,7 @@
 	  	</div> <!-- closet page -->
         
         
-        
+        <script src="/static/js/main1.js"></script>
     </body>
 </html>
 
