--- a/Laced/templates/detail.html
+++ b/Laced/templates/detail.html
@@ -10,17 +10,22 @@
     </head>
     <body> 
       <header>
-            <h1><img src='/static/images/lacedlogo_1.png' /></h1> 
-           <nav>
-                <a href='/home'>Home</a>
-                <a href='/store'>Shop</a>
-                <a href='/trade'>Trade</a>
-                <a href='/closet'>Closet</a>
-                  <!---  <button><a href="{{ url_for('logout') }}">Logout</a></button> -->
-            </nav>      
+        <nav id="slide-menu">
+            <br/>
+            <h1><img src='/static/images/lacedlogo_1.png'/></h1>
+	       <ul>
+                <li class="timeline"><a href="/home">Home</li></a>
+                <li class="events"><a href="/store">Shop</li></a>
+                <li class="calendar"><a href="/trade">Trade</li></a>
+                <li class="sep settings"><a href="/closet">Closet</li></a>
+		        <li class="logout"><a href="{{ url_for('logout') }}">Logout</li></a>
+	       </ul>
+        </nav>      
         </header>
+        
                     {% for item in pagedata %}
-        <div class="shop">
+        <div id='content' class='shop'>
+        <div class="menu-trigger"></div>
              <h3>{{item[1]}}</h3>
             <br />
             <center><img src='{{item[3]}}' width='300px'/> </center>
@@ -36,6 +41,7 @@
         {% endfor %}
          </div>
                <button><a href="{{ url_for('shop') }}">back</a></button>  <button>Add To Cart</button>
+    <script src="/static/js/main1.js"></script>
     </body>
 </html>
 
