--- a/Laced/templates/shop.html
+++ b/Laced/templates/shop.html
@@ -9,16 +9,19 @@
    
     </head>
     <body> 
-      <header>
-            <h1><img src='static/images/lacedlogo_1.png' /></h1>
-            <nav>
-                <a href='/home'>Home</a>
-                <a href='/store'>Shop</a>
-                <a href='/trade'>Trade</a>
-                <a href='/closet'>Closet</a>
-                   <!--- <button><a href="{{ url_for('logout') }}">Logout</a></button>-->
-            </nav>
-        </header>
+     <header>
+           <h1><img src='/static/images/lacedlogo_1.png'/></h1>
+	       <ul>
+                <li class="timeline"><a href="/home">Home</li></a>
+                <li class="events"><a href="/store">Shop</li></a>
+                <li class="calendar"><a href="/trade">Trade</li></a>
+                <li class="sep settings"><a href="/closet">Closet</li></a>
+		        <li class="logout"><a href="{{ url_for('logout') }}">Logout</li></a>
+	       </ul>
+        </nav> 
+      </header>
+    <div id='content' class='shop'>
+        <div class="menu-trigger"></div>
         <!---{{session["loggedin"]}} -->
 
         <!--- var dumbs
@@ -38,7 +41,6 @@
    <a href="#"><img id='shopicon' src='static/cart_icon.png' /></a> 
 
          {% for shoe in shoe_list %}
-         <div class="shop">
             <div class='Main'>
                 <h3><a href="/store/{{ shoe.id }}">{{ shoe.common_name }}</a></h3>
                   <a href="/store/{{ shoe.id }}">
@@ -48,6 +50,7 @@
              </div>
         {% endfor %}
          </div>
+        <script src="/static/js/main1.js"></script>
     </body>
 </html>
 
