--- a/Laced/templates/trade.html
+++ b/Laced/templates/trade.html
@@ -8,23 +8,27 @@
     <link rel='stylesheet' type='text/css' href='/static/css/main.css'/>
     </head>
     <body> 
-         <header>
-            <h1><img src='static/images/lacedlogo_1.png' /></h1> 
-            <nav>
-                <a href='/home'>Home</a>
-                <a href='/store'>Shop</a>
-                <a href='/trade'>Trade</a>
-                <a href='/closet'>Closet</a>
-            </nav>
-        </header>
+     <header>
+         <nav id="slide-menu">
+           <br/>
+           <h1><img src='static/images/lacedlogo_1.png'/></h1>
+	       <ul>
+              <li class="timeline"><a href="/home">Home</li></a>
+              <li class="events"><a href="/store">Shop</li></a>
+              <li class="calendar"><a href="/trade">Trade</li></a>
+              <li class="sep settings"><a href="/closet">Closet</li></a>
+		      <li class="logout"><a href="{{ url_for('logout') }}">Logout</li></a>
+	       </ul>
+        </nav>
+     </header>
+    <div id='content'>
                 
         {% for item in pagedata %}
         <ul class="photo-grid">
 					<li><a href="/trade/{{item[0]}}"><img src='{{item[4]}}'/></a></li>
          {% endfor %}
         </div>
-
-
+        <script src="/static/js/main1.js"></script>
     </body>
 </html>
 
