--- a/Laced/templates/shop.html
+++ b/Laced/templates/shop.html
@@ -10,6 +10,7 @@
     </head>
     <body> 
      <header>
+         <nav id="slide-menu">
            <h1><img src='/static/images/lacedlogo_1.png'/></h1>
 	       <ul>
                 <li class="timeline"><a href="/home">Home</li></a>
