--- a/Laced/templates/home.html
+++ b/Laced/templates/home.html
@@ -26,26 +26,16 @@
         <!--- var dumbs
         {{ pagedata }} -->
          <br />
-    
         <div id='content' class='home'>
-            <div class="menu-trigger"></div>
-            <!-- <h4>Shop</h4>--> <!--- temp heading just to show what db call is printing where -->
-        {% for item in pagedata %}
+        <div class="menu-trigger"></div>
+     {% for shoe in shoe_list %}
+         <!-- <h4>Shop</h4>--> <!--- temp heading just to show what db call is printing where -->
       <div class='homeItems'>
-          <div class='homeName'><h3>{{item[1]}}</h3></div>
-            <img src='{{item[3]}}'/> <p>{{item[5]}}</p><button><a href="/shop/{{item[0]}}">Shop</a></button>
+          <div class='homeName'><h3>{{ shoe.common_name }}</h3></div>
+            <img src='{{ shoe.imgurl }}'/><button><a href="/store/{{ shoe.id }}">Shop</a></button>
               
             </div>
              {% endfor %}
-        
-       <!-- <h4>Trades</h4>--> <!--- temp heading just to show what db call is printing where -->
-        {% for item in trade %}
-             <div class='homeItems'>  
-                <div class='homeName'><h3>{{item[1]}}</h3></div>
-                    <img src='{{item[3]}}'/> <p>{{item[2]}}</p> <button><a href="/trade/{{item[0]}}">Trade</a></button> 
-        
-        </div> 
-            {% endfor %} 
          </div>
         <script src="/static/js/main1.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
