--- a/Laced/templates/tradeuplaodform.html
+++ b/Laced/templates/tradeuplaodform.html
@@ -23,7 +23,7 @@
     </header>
     <div id='content'>
         <div class="menu-trigger"></div>
-        
+         <p>Trades are posted within 3hours of your upload that way we here at laced can assure that quality trades are being posted, When a user makes an offer on your trade a notifaction will be sent to your closet and then you accept or decline it.</p>
         <p>Laced is all about Trading in a safe way! Make sure to add size, condition and a brief description along with a good image the better the image, and description the better chance of someone making a offer on the item</p>
 
             <form action="/upload" method=post enctype=multipart/form-data>
@@ -37,7 +37,7 @@
         </p>
         </form>
         
- <button class='trades'><a href="{{ url_for('closet') }}">back to closet</a></button>
+ <button class='checkout'><a href="{{ url_for('closet') }}">back to closet</a></button>
 <script src="/static/js/main1.js"></script>
     </body>
 </html>
