Got user profile pic from login info

--- a/Laced/templates/closet.html
+++ b/Laced/templates/closet.html
@@ -31,7 +31,7 @@
             <br/>
 		  	<div class="row">
 		  		<div class="col col-33 col-offset-33 center">
-		  			<img class="profile_pic" src="static/images/profile_pic.png" width='200px'/>
+		  			<img class="profile_pic" src="{current_user.profilepic}}" width='100px'/>
 		  		</div>
 		  	</div> <!-- / row -->
 
