Clear cart still not working properly
It clears that cart but once you hit add to cart it errors about the
cart.append(id) line

--- a/Laced/templates/cart.html
+++ b/Laced/templates/cart.html
@@ -34,7 +34,9 @@
             <li>${{ shoe[1] * shoe[2] }}</li>
             
         </ul>
+            
              {% endfor %}
+            <a href="/clearcart" class="btn btn-large btn-default">Clear Cart</a>
             <center><a class='basicback' href="{{ url_for('shop') }}">Contiune shopping</a> </center>
                  <center><button>Checkout<a><script src="/static/js/paypal-button.min.js?merchant=highfashionentertainment@gmail.com"
     data-button="buynow"
